[package]
name = "wonopui"
version = "0.1.0"
edition = '2021'
build = "build.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3.68", features = [
  "HtmlDocument",
  "Document",
  "HtmlInputElement",
  "HtmlIFrameElement",
  "Element",
  "DomRect",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlDivElement",
  "HtmlImageElement",
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "ImageData", 
  "HtmlCanvasElement",
  "Navigator",
  "Window",
  "Clipboard",
  "DragEvent",
  "DataTransfer",
  "HtmlStyleElement",
  "HtmlLinkElement",
  "ResizeObserver",
  "IntersectionObserver",
  "MutationObserver",
  "CssStyleDeclaration",
  "CustomEvent",
  "CustomEventInit",
  "PointerEvent",
  "KeyboardEvent",
  "KeyboardEventInit",
  "MediaQueryList",
  "MediaQueryListEvent",
  "SvgElement",
] }
yew-router = "0.18.0"
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
chrono = { version = "0.4.23", features = ["serde", "wasmbind"] }
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
chrono-humanize = "0.2.3"

[build-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tera = "1.20.0"
regex = "1.5"
