[package]
name = "wonopui"
version = "0.0.1"
edition = '2021'
build = "build/main.rs"
authors = ["Troels F. Rønnow <troels@wonop.com>"]
description = "Rush Deployment: A tool to bring the development experience as close to the production experience as possible."
license = "MIT"
repository = "https://github.com/wonop-io/wonopui"
homepage = "https://github.com/wonop-io/wonopui"
readme = "README.md"
keywords = ["yew", "tailwindcss", "ui"]
categories = ["web-programming"]

[features]
default = []
ThemeProvider = []
Accordion = []
Alert = []
Avatar = []
Badge = []
Breadcrumb = []
Button = []
Calendar = []
Card = []
Carousel = []
Checkbox = []
Col = []
Collapsible = []
ColorPicker = []
ColorPickerHue = []
ColorPickerLight = []
ColorPickerSaturation = []
ColorPickerWheel = []
Combobox = []
Command = []
Container = []
Content = []
ContextMenu = []
DarkModeProvider = []
Dialog = []
Divider = []
DragPoint = []
Drawer = []
Dropdown = []
GroupButton = []
Iframe = []
Input = []
Label = []
MediaQuery = ["WindowProvider"]
Notification = []
PageHeader = []
Pagination = []
PaintCanvas = []
Placeholder = []
Popover = []
Resizable = []
Select = []
Selectable = []
Switch = []
Table = []
Tabs = []
TagInput = []
TailwindColorPicker = []
Textarea = []
Toggle = []
Typography = []
WindowProvider = []
Layout = []
MulticolSidebar = []
PageContent = []
Sidebar = []
Topbar = []
everything = [
    "ThemeProvider",
    "Accordion",
    "Alert",
    "Avatar",
    "Badge",
    "Breadcrumb",
    "Button",
    "Calendar",
    "Card",
    "Carousel",
    "Checkbox",
    "Col",
    "Collapsible",
    "ColorPicker",
    "ColorPickerHue",
    "ColorPickerLight",
    "ColorPickerSaturation",
    "ColorPickerWheel",
    "Combobox",
    "Command",
    "Container",
    "Content",
    "ContextMenu",
    "DarkModeProvider",
    "Dialog",
    "Divider",
    "DragPoint",
    "Drawer",
    "Dropdown",
    "GroupButton",
    "Iframe",
    "Input",
    "Label",
    "MediaQuery",
    "Notification",
    "PageHeader",
    "Pagination",
    "PaintCanvas",
    "Placeholder",
    "Popover",
    "Resizable",
    "Select",
    "Selectable",
    "Switch",
    "Table",
    "Tabs",
    "TagInput",
    "TailwindColorPicker",
    "Textarea",
    "Toggle",
    "Typography",
    "WindowProvider",
    "Layout",
    "MulticolSidebar",
    "PageContent",
    "Sidebar",
    "Topbar",
]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3.68", features = [
    "HtmlDocument",
    "Document",
    "HtmlInputElement",
    "HtmlIFrameElement",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "ImageData",
    "HtmlCanvasElement",
    "Navigator",
    "Window",
    "Clipboard",
    "DragEvent",
    "DataTransfer",
    "HtmlStyleElement",
    "HtmlLinkElement",
    "ResizeObserver",
    "IntersectionObserver",
    "MutationObserver",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "PointerEvent",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MediaQueryList",
    "MediaQueryListEvent",
    "SvgElement",
] }
yew-router = "0.18.0"
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
chrono = { version = "0.4.23", features = ["serde", "wasmbind"] }
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
chrono-humanize = "0.2.3"

[build-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tera = "1.20.0"
regex = "1.5"
