[package]
name = "gallery"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3.68", features = [
    "HtmlDocument",
    "Document",
    "HtmlInputElement",
    "HtmlIFrameElement",
    "Element",
    "DomRect",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "HtmlImageElement",
    "Navigator",
    "Window",
    "Clipboard",
    "DragEvent",
    "DataTransfer",
    "HtmlStyleElement",
    "HtmlLinkElement",
    "ResizeObserver",
    "IntersectionObserver",
    "MutationObserver",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "PointerEvent",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MediaQueryList",
    "MediaQueryListEvent",
    "SvgElement",
    "DomTokenList",
] }
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
serde = { version = "1.0.195", features = ["derive"] }
yewdux = "0.11.0"
serde_json = "1.0.111"
serde-wasm-bindgen = "0.6.3"
yew-router = "0.18.0"
validator = { version = "0.16.0", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde", "wasmbind"] }
chrono-humanize = "0.2.3"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
uuid = { version = "1.3.0", features = ["serde", "v4", "js"] }
tracing-web = "0.1.3"
tracing-subscriber = "0.3.18"
futures = "0.3"
reqwest-wasm = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
tera = "1.19.1"
gloo-events = "0.2.0"
scraper = "0.19.0"
reqwasm = "0.5.0"
tailwind-css = "0.13.0"
lazy_static = "1.5.0"
wonopui = { path = "../../../wonopui", features = [
    "everything",
    "ThemeProvider",
] }
log = "0.4.20"

# This is needed for fixing compatibility after the reorganization
[features]
default = []
compat_hooks = []
